# EchoPilot

./: .gitignore  pyproject.toml
EchoPilot/: drone_agent.py  drone_server.py  requirements.txt  speaker.py  voice_recognizer.py
